app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #a4bcde;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #a4bcde;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

.slick-arrow,
.slick-arrow::before,
.slick-arrow::after {
  color: white !important;
  opacity: 1 !important;
}

.slick-dots li button {
  background-color: white !important;
}

